# spi_precipitation_maps

./: .gitignore  README.md  requirements.txt  setup.cfg
sampex_maps/: calc_l_mlt_map.py  dial.py  utils.py
spi_precipitation_maps/: __init__.py  __main__.py  bin_data.py  bin_sampex_hilt.py  dial.py
